# mcp-server-agent

./: .gitignore  README.md  mcp-server-agent.sln
dotnet/: Directory.Build.props  Directory.Build.targets  Directory.Packages.props
dotnet/SecretAgent/src/: DependencyInjectionExtensions.cs  Program.cs  SecretAgent.csproj  SecretAgentOptions.cs  SecretConversation.cs  SecretsAgent.cs  SecretsAgentService.cs  SecretsConversation.cs
dotnet/SecretAgent/tests/: SecretAgent.Tests.csproj  SecretsAgentTests.cs
src/: agent.py
src/app/: agent.py  app.py  pyproject.toml
src/docker_generator/: __init__.py  agent.py  codeql_config.py  docker_generator.py  pyproject.toml
